# Icon-Installer

./: .gitignore  CMakeLists.txt  README.md  iconinstaller.sublime-project
data/: iconinstaller.desktop
debian/: changelog  control  copyright
po/: CMakeLists.txt
src/: config.vala.cmake  iconinstaller.vala  main.vala
src/Core/: FileSystem.vala  IconPackDecoder.vala  IconPackInstaller.vala
src/Models/: Icon.vala  IconPack.vala
src/UserInterface/Menus/: ApplicationMenu.vala
src/UserInterface/Views/: MainView.vala  SuccessView.vala  WelcomeView.vala
src/UserInterface/Widgets/: HeaderBar.vala  TrueFalseBox.vala  ViewStack.vala
src/UserInterface/Windows/: MainWindow.vala
tools/: dev-shell  install-deps
